# ROS

./: README.md  참고.txt
GT/: CMakeLists.txt  package.xml
GT/gt_generator/: CMakeLists.txt  package.xml
GT/gt_generator/scripts/: gt_generator_node.py
GT/image_pose_rviz/: CMakeLists.txt  image_pose_config.rviz  package.xml
GT/image_pose_rviz/launch/: image_pose_visualizer.launch
GT/image_pose_rviz/src/: image_pose_visualizer.py  model.py
GT/pose_to_txt/src/: pose_to_txt_node.cpp
GT/pose_visualizer/: CMakeLists.txt  package.xml
GT/pose_visualizer/launch/: pose_visualizer.launch
GT/pose_visualizer/rviz/: pose_visualizer.rviz
GT/pose_visualizer/scripts/: pose_visualizer.py
Lego-Loam/: CMakeLists.txt
Posenet/: dataset_train.txt
Posenet/best_net/: data.pkl
Posenet/best_net/data/: 0  1  10  100  102  103  104  105  106  108  109  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  141  (+137 more)
